--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-TZ=
 NODE_ENV=
 APP_PORT=
-COOKIE_SECRET=
+
+ACCESS_TOKEN_SECRET=
 
 DATABASE_TYPE=
 DATABASE_HOST=
@@ -13,15 +13,3 @@ DATABASE_NAME=
 
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
-
-SENTRY_DSN=
-ADMINJS_PRIVATE_KEY=
-
-AWS_ACCESS_KEY=
-AWS_SECRET_ACCESS_KEY=
-
-SUPPORT_EMAIL=
-
-FIREBASE_PROJECT_ID=
-FIREBASE_PRIVATE_KEY=
-FIREBASE_CLIENT_EMAIL=
