--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,29 @@
 services:
   database:
-    image: postgis/postgis:16-3.4-alpine
+    image: postgres:15-alpine
     ports:
-      - ${DATABASE_PORT}:5432
-   
+      - 5432:5432
     environment:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: ${DATABASE_NAME}
+    volumes:
+      - postgres:/var/lib/postgresql/data
+
+  # server:
+  #   build:
+  #     context: ./
+  #     dockerfile: ./Dockerfile
+  #     target: development
+  #   restart: always
+  #   volumes:
+  #     - /app/node_modules
+  #     - ./:/app/
+  #   ports:
+  #     - 3000:3000
+  #   depends_on:
+  #     - database
+
+
+volumes:
+  postgres:
