--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "db:seed": "dotenv -- tsx ./scripts/seeds/runner.ts",
+    "db:seed:mock": "dotenv -- tsx ./scripts/seeds/create-mock-data.ts",
     "typeorm": "dotenv -- cross-var tsx ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm -- migration:generate -d ./src/modules/db/datasource.ts ./src/modules/db/migrations/$npm_config_name",
     "migration:create": "npm run typeorm -- migration:create ./src/modules/db/migrations/$npm_config_name",
@@ -36,6 +37,7 @@
     "@aws-sdk/client-s3": "^3.637.0",
     "@aws-sdk/client-ses": "^3.632.0",
     "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "@faker-js/faker": "^9.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
